# python-backend-example-with-db-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.__project_kebab}}/: .dockerignore  .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  CODEOWNERS  alembic.ini  conftest.py  docker-compose.yaml  pyproject.toml  {{cookiecutter.__gitignore}}
{{cookiecutter.__project_kebab}}/.deploy/docker/: Dockerfile  entrypoint.sh
{{cookiecutter.__project_kebab}}/.deploy/helm/app/: .helmignore  Chart.yaml  values.yaml
{{cookiecutter.__project_kebab}}/.deploy/helm/app/templates/: NOTES.txt  _envs.tpl  _helpers.tpl  _tplvalues.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
{{cookiecutter.__project_kebab}}/.deploy/helm/values/: dev.yaml  prod.yaml
{{cookiecutter.__project_kebab}}/alembic/: env.py
{{cookiecutter.__project_kebab}}/alembic/versions/: 2026_06_01_ee9f8ca57bd5_initial.py
{{cookiecutter.__project_kebab}}/migrations/sqlite/models/: 0_20231219192854_init.py
{{cookiecutter.__project_kebab}}/tests/: conftest.py  test_app.py
{{cookiecutter.__project_kebab}}/{{cookiecutter.__project_slug}}/: application_context.py  cli.py  conftest.py  database.py  main.py  models.py  slog.py  slog_test.py  test_app.py  tracking.py  tracking_test.py
{{cookiecutter.__project_kebab}}/{{cookiecutter.__project_slug}}/api/: __init__.py  api.py  spec.py  test_api.py
{{cookiecutter.__project_kebab}}/{{cookiecutter.__project_slug}}/storage/: connection_pool.py  db_utils.py  post_repo.py  test_connection_pool.py  test_posts_repo.py
{{cookiecutter.__project_kebab}}/{{cookiecutter.__project_slug}}/storage/models/: __init__.py  base.py  custom_types.py  posts.py
{{cookiecutter.__project_kebab}}/{{cookiecutter.__project_slug}}/testing_utils/: db_setup.py  log.py
