[build-system]
requires = ["poetry-core>=1.8.2", "packaging"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "{{cookiecutter.__project_kebab}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_full_name}} <{{cookiecutter.author_email}}>"]


[tool.poetry.dependencies]
# Server deps
python = "^3.13"
uvloop = "^0.21.0"
uvicorn = "^0.32.0"
fastapi = "^0.115.3"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
sentry-sdk = "^2.17.0"
starlette-exporter = "^0.23.0"
typer = "^0.12.5"
decorator = "^5.1.1"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
alembic = "^1.14.1"
aiosqlite = "^0.21.0"



[tool.poetry.group.test]
optional = true


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.2"


[tool.poetry.group.lint]
optional = true


[tool.poetry.group.lint.dependencies]
pyright = "^1.1.386"
pylint = "^3.3.1"


[[tool.poetry.source]]
name = "distribusion"
url = "https://gitlab.com/api/v4/groups/15793598/-/packages/pypi/simple"
priority = "primary"


[tool.isort]
profile = "black"


[tool.pylint.messages_control]
disable = "C0115, R0903, C0116, R1734, R1735, E0401, E0611, R0913, R0902"


[tool.pylint.format]
max-line-length = "88"


[tool.black]
include = "{{cookiecutter.__project_slug}}"


# At the moment, this might break the CI
# + In general, pyright and env are to be configured by user
# [tool.pyright]
# include = ["{{cookiecutter.__project_slug}}"]
# venvPath = "."
# venv = ".venv"


[tool.coverage.run]
source = ["{{cookiecutter.__project_slug}}"]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "module"

# Command-line entrypoint
# To run it, type `{{cookiecutter.__project_kebab}} --help` in console
# To make this available, run `poetry install` in desired python venv
[tool.poetry.scripts]
{{cookiecutter.__project_kebab}} = '{{cookiecutter.__project_slug}}.cli:app'
