[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "{{cookiecutter.__project_kebab}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [{ name = "{{cookiecutter.author_full_name}} <{{cookiecutter.author_email}}>" }]
requires-python = ">=3.14,<4.0"

dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "decorator>=5.3.1",
    "fastapi>=0.138.1",
    "greenlet>=3.5.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "sentry-sdk>=2.63.0",
    "sqlalchemy>=2.0.51",
    "starlette-exporter>=0.23.0",
    "typer>=0.26.8",
    "uvicorn>=0.49.0",
    "uvloop>=0.22.1",
]

[project.scripts]
{{cookiecutter.__project_kebab}} = "{{cookiecutter.__project_slug}}.cli:app"


[dependency-groups]
test = [
    "coverage>=7.13.5",
    "httpx>=0.27.2,<0.28",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.1.0,<8",
    "pytest-xdist>=3.8.0",
    "testcontainers>=4.14.2",
]
lint = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408,<2",
    "ruff>=0.15.20",
]


[[tool.uv.index]]
name = "distribusion"
url = "https://gitlab.com/api/v4/groups/15793598/-/packages/pypi/simple"
explicit = true


[tool.ruff.lint]
ignore = ["F405","F403"]


[tool.coverage.run]
source = ["{{cookiecutter.__project_slug}}"]


[tool.pytest.ini_options]
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
